<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="?android:selectableItemBackground"
    app:cardPreventCornerOverlap="false">

  <ImageView
      android:id="@+id/iv_recipe_image"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:adjustViewBounds="true"
      android:contentDescription="@string/recipe_image" />

  <TextView
      android:id="@+id/tv_recipe_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin"
      android:textAppearance="@android:style/TextAppearance.Large"
      tools:text="Nutella Pie" />
</android.support.v7.widget.CardView>
