<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_list_fragment"
    android:name="fr.wayofcode.jeremy.bakingapp.fragment.MasterListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wayofcode.jeremy.bakingapp.activity.IngredientStepDetailActivity"
    tools:layout="@layout/fragment_master_list" />
